<resources>
    <string name="app_name">Shopify_Memory_Game</string>
    <string name="shuffle">Shuffle</string>
    <string name="adjust_grid_size">Adjust grid size</string>
    <string name="adjust_match_size">Adjust match size</string>
    <string name="score">Score:</string>
    <string name="winner">Winner</string>
    <string name="winner_winner_chicken_dinner">Winner winner chicken dinner</string>
    <string name="your_score">Your score:</string>
    <string name="_0">0</string>
    <string name="high_score">High Score:</string>
    <string name="info">Info</string>
    <string name="infoBody">Match gives 10 point\nA false match removes 2 points\nBy: Cezar Begu\nbegu@uwindsor.ca</string>

</resources>
